# meal-prep-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
plugins/meal-prep-agent/: .mcp.json
plugins/meal-prep-agent/.claude-plugin/: plugin.json
plugins/meal-prep-agent/.codex-plugin/: plugin.json
plugins/meal-prep-agent/data/: .gitignore  history.template.json  profile.template.json
plugins/meal-prep-agent/mcp/: LICENSE  README.md  bootstrap.py  pyproject.toml
plugins/meal-prep-agent/mcp/src/woolworths_mcp/: __init__.py  client.py  models.py  server.py
plugins/meal-prep-agent/scripts/: memory.py
plugins/meal-prep-agent/skills/weekly-meal-prep/: SKILL.md
plugins/meal-prep-agent/skills/woolworths-cart-builder/: SKILL.md
tests/: test_bundled_mcp_contract.py  test_weekly_meal_prep_contract.py  test_woolworths_cart_builder_contract.py
